form group complted

--- a/src/app/banks/banks.component.html
+++ b/src/app/banks/banks.component.html
@@ -34,5 +34,12 @@
     <li class="page-item"><a class="page-link" (click)="pagination(1)">1</a></li>
     <li class="page-item"><a class="page-link" (click)="pagination(2)">2</a></li>
     <li class="page-item"><a class="page-link" (click)="pagination(3)">3</a></li>
-
+    <li class="page-item"><a class="page-link" (click)="pagination(4)">4</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(5)">5</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(6)">6</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(7)">7</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(8)">8</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(9)">9</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(10)">10</a></li>
+    <li class="page-item"><a class="page-link" (click)="pagination(11)">11</a></li>
 </ul>
