--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,6 +24,7 @@
         <h6 routerLink="flipkart">flipkart</h6>
         <h6 routerLink="typicodemail"> typicode mail</h6>
         <h6 routerLink="create-account">create account</h6>
+        <h6 routerLink="create-user">create user</h6>
         <button (click)="logout()">logout</button>
 
     </div>
