reactive forms completes

--- a/src/app/banks/banks.component.html
+++ b/src/app/banks/banks.component.html
@@ -26,6 +26,8 @@
             <td>
                 <button (click)="view( account.id)" class="btn btn-primary">view</button>
             </td>
+            <td><button (click)="edit(account.id)" class="btn btn-primary">Edit </button></td>
+
         </tr>
     </tbody>
 </table>
