--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -22,6 +22,11 @@
         <input type="text" formControlName="city"><br>
         <label>pin:</label>
         <input type="number" formControlName="pin">
+        <div *ngIf="userForm.get('address')?.get('pin')?.touched && userForm.get('address')?.get('pin')?.invalid ">
+            <p *ngIf="userForm.get('address')?.get('pin')?.errors?.['required']">required</p>
+            <p *ngIf="userForm.get('address')?.get('pin')?.errors?.['min']">Pin should be consist in min 6 digits</p>
+            <p *ngIf="userForm.get('address')?.get('pin')?.errors?.['max']">Pin should be consist in max 6 digits</p>
+        </div>
     </div>
 
     <button (click)="add()" class="btn btn-primary">add card</button>
@@ -33,7 +38,12 @@
                 <br>
                 <input type="text" formControlName="expiry" placeholder="expiry">
                 <br>
-                <input type="text" formControlName="cvv">
+                <input type="number" placeholder="cvv" formControlName="cvv">
+                <div *ngIf="cardsFormArray.controls[i].get('cvv')?.touched && cardsFormArray.controls[i].get('cvv')?.invalid">
+                    <p *ngIf="cardsFormArray.controls[i].get('cvv')?.errors?.['required']">CVV is required</p>
+                    <p *ngIf="cardsFormArray.controls[i].get('cvv')?.errors?.['min']">CVV min 3 digits</p>
+                    <p *ngIf="cardsFormArray.controls[i].get('cvv')?.errors?.['max']">CVV max 3 digits</p>
+                </div>
                 <button class="btn btn-danger" (click)="delete(i)">delete</button>
             </div>
 
@@ -63,7 +73,7 @@
     <br>
     
 
-
+    
 
 
 </form> 
